// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. should render the default layout 1`] = `
<FadeIn>
  <div>
    <div>
      <div>
        <TimesImage
          aspectRatio={0.6666666666666666}
          uri="https://img.io/img&resize=360"
        />
      </div>
      <div>
        <div>
          A card
        </div>
      </div>
    </div>
  </div>
</FadeIn>
`;

exports[`2. should pass an empty state to the image component 1`] = `
<FadeIn>
  <div>
    <div>
      <div>
        <TimesImage
          aspectRatio={0.6666666666666666}
          uri=""
        />
      </div>
      <div>
        <div>
          A card with an empty image
        </div>
      </div>
    </div>
  </div>
</FadeIn>
`;

exports[`4. should render without an image when showImage is false 1`] = `
<FadeIn>
  <div>
    <div>
      <div>
        <div>
          No image
        </div>
      </div>
    </div>
  </div>
</FadeIn>
`;

exports[`5. should pass an empty state to the image component when uri is null 1`] = `
<FadeIn>
  <div>
    <div>
      <div>
        <TimesImage
          aspectRatio={0.6666666666666666}
          uri=""
        />
      </div>
      <div>
        <div>
          No URI
        </div>
      </div>
    </div>
  </div>
</FadeIn>
`;

exports[`6. should render with reversed layout 1`] = `
<FadeIn>
  <div>
    <div>
      <div>
        <div>
          A card in reverse
        </div>
      </div>
      <div>
        <TimesImage
          aspectRatio={0.6666666666666666}
          uri="https://img.io/img&resize=360"
        />
      </div>
    </div>
  </div>
</FadeIn>
`;

exports[`7. should render with reversed layout and no image 1`] = `
<FadeIn>
  <div>
    <div>
      <div>
        <div>
          A card in reverse with no image
        </div>
      </div>
    </div>
  </div>
</FadeIn>
`;

exports[`8. should render a loading state 1`] = `
<div>
  <div>
    <TimesImage
      aspectRatio={0.6666666666666666}
      uri=""
    />
  </div>
  <div>
    <Gradient
      degrees={264}
    />
    <Gradient
      degrees={267}
    />
    <Gradient
      degrees={267}
    />
    <Gradient
      degrees={267}
    />
  </div>
</div>
`;

exports[`10. should render a loading card with no image 1`] = `
<div>
  <div>
    <Gradient
      degrees={264}
    />
    <Gradient
      degrees={267}
    />
    <Gradient
      degrees={267}
    />
    <Gradient
      degrees={267}
    />
  </div>
</div>
`;

exports[`11. should render a reversed loading component 1`] = `
<div>
  <div>
    <Gradient
      degrees={264}
    />
    <Gradient
      degrees={267}
    />
    <Gradient
      degrees={267}
    />
    <Gradient
      degrees={267}
    />
  </div>
  <div>
    <TimesImage
      aspectRatio={0.6666666666666666}
      uri=""
    />
  </div>
</div>
`;

exports[`12. should render a reversed loading component with no image 1`] = `
<div>
  <div>
    <Gradient
      degrees={264}
    />
    <Gradient
      degrees={267}
    />
    <Gradient
      degrees={267}
    />
    <Gradient
      degrees={267}
    />
  </div>
</div>
`;

exports[`13. should not re-render when imageRatio prop is changed 1`] = `
<FadeIn>
  <TimesImage
    aspectRatio={0.6666666666666666}
    uri="https://img.io/img&resize=360"
  />
  Do not re-render me
</FadeIn>
`;

exports[`13. should not re-render when imageRatio prop is changed 2`] = `
<FadeIn>
  <TimesImage
    aspectRatio={0.6666666666666666}
    uri="https://img.io/img&resize=360"
  />
  Do not re-render me
</FadeIn>
`;

exports[`14. should re-render when image uri changes 1`] = `
<FadeIn>
  <TimesImage
    aspectRatio={0.6666666666666666}
    uri="https://img.io/img&resize=360"
  />
  Some text
</FadeIn>
`;

exports[`14. should re-render when image uri changes 2`] = `
<FadeIn>
  <TimesImage
    aspectRatio={0.6666666666666666}
    uri="http://foo&resize=360"
  />
  Some text
</FadeIn>
`;

exports[`15. should re-render when image size changes 1`] = `
<FadeIn>
  <TimesImage
    aspectRatio={0.6666666666666666}
    uri="https://img.io/img&resize=360"
  />
  Some content
</FadeIn>
`;

exports[`15. should re-render when image size changes 2`] = `
<FadeIn>
  <TimesImage
    aspectRatio={0.6666666666666666}
    uri="https://img.io/img"
  />
  Some content
</FadeIn>
`;

exports[`16. should re-render when loading state changes 1`] = `Array []`;

exports[`16. should re-render when loading state changes 2`] = `
<FadeIn>
  <TimesImage
    aspectRatio={0.6666666666666666}
    uri="https://img.io/img&resize=360"
  />
  Re-render me
</FadeIn>
`;
